RESOLVED FIXED187683
Shrink CompositeAnimation and AnimationBase
https://bugs.webkit.org/show_bug.cgi?id=187683
Summary Shrink CompositeAnimation and AnimationBase
Simon Fraser (smfr)
Reported 2018-07-14 17:16:10 PDT
Shrink CompositeAnimation and AnimationBase
Attachments
Patch (4.16 KB, patch)
2018-07-14 17:17 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2018-07-14 17:17:04 PDT
Antoine Quint
Comment 2 2018-07-16 10:30:36 PDT
Comment on attachment 345044 [details] Patch I was a bit puzzled by this patch since there was no explanation as to why the member variables were declared in a different spot. Ideally there would be a comment or an assertion if the class size exceeds the expected amount. Then we could refer back to this patch as good practice for memory-efficient classes.
Daniel Bates
Comment 3 2018-07-16 20:06:32 PDT
Comment on attachment 345044 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=345044&action=review We may want to consider taking a similar approach as RenderStyle? and add static asserts to prevent a size regression. > Source/WebCore/ChangeLog:8 > + Reduce the size of CompositeAnimation and AnimationBase. How much did we reduce it by?
WebKit Commit Bot
Comment 4 2018-07-18 00:02:09 PDT
Comment on attachment 345044 [details] Patch Clearing flags on attachment: 345044 Committed r233908: <https://trac.webkit.org/changeset/233908>
WebKit Commit Bot
Comment 5 2018-07-18 00:02:10 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-07-18 00:03:27 PDT
Note You need to log in before you can comment on or make changes to this bug.