Shrink CompositeAnimation and AnimationBase https://bugs.webkit.org/show_bug.cgi?id=187683

Reviewed by Daniel Bates.

Reduce the size of CompositeAnimation and AnimationBase.

* page/animation/AnimationBase.h:
* page/animation/CompositeAnimation.h:


Canonical link: https://commits.webkit.org/202953@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233908 268f45cc-cd09-0410-ab3c-d52691b4dbfc